CSS/style.css
html{
    height: 100%;
    font-size: 20pt;
}
.main{
    height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: gray;
    text-align: center;
    font-family: 'Roboto';
}
.header{
    height: 7vh;
    flex-shrink: 0;
}
.gameboard{
    width: 85%;
    display: Flex;
    height: 100%;
    /* flex: 1 0 auto; css-tricks: Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
    background-color: papayawhip;
    justify-content: space-around;
}

.lettersRemaining{
    font-size: 30pt;
    height: 90%;
    text-transform: uppercase;
    min-width: 40%;
    flex-flow: row wrap;
    display: flex;
}
.letter{
    flex-flow: wrap;
}
.guessingArea{
    min-width: 40%;

}
.hidden{
    color: papayawhip;
}
.footer{
    height: 5vh;
    flex-shrink: 0;
    text-align: right;
    margin: 3px;
}
/* font-weight thin if used and bold if not */
/* Use the scale-in and scale-out classes to make the letters appear and disappear. */

